--- a/e_m_adventures/src/layout/Covid/Covid.module.css
+++ b/e_m_adventures/src/layout/Covid/Covid.module.css
@@ -1,7 +1,6 @@
-.home {
+.covid {
   min-height: 100vh;
   display: grid;
   grid-template-columns: 100%;
   grid-auto-rows: max-content;
-  /* background-color: red; */
 }
